add open_complaints url from tableau

--- a/src/DBapp.form
+++ b/src/DBapp.form
@@ -428,6 +428,12 @@
               <text value="Label"/>
             </properties>
           </component>
+          <component id="46a73" class="javax.swing.JLabel" binding="relationshipsHostTableLabel">
+            <constraints border-constraint="West"/>
+            <properties>
+              <text value="Label"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
